# omnidf

./: .env  LICENSE  README.md  pyproject.toml
demos/: demo_filter_pushdown.py  demo_semantic_fusion.py  demo_semantic_join.py
src/omnidf/: __init__.py  dataframe.py  execution.py  plan.py  settings.py  visualization.py
src/omnidf/models/: __init__.py  base.py  config.py  litellm_client.py  mock_client.py
src/omnidf/ops/: __init__.py  base.py  relational.py  semantic_dedup.py  semantic_filter.py  semantic_join.py  semantic_map.py
src/omnidf/optimizer/: __init__.py  base.py  llm_optimizer.py
src/omnidf/optimizer/rules/: __init__.py  filter_pushdown.py  projection_pushdown.py  semantic_fusion.py  semantic_join_decomposition.py
tests/: __init__.py  conftest.py  test_filter_pushdown.py  test_pandas_api.py  test_plan_serialization.py  test_semantic_filter_fusion.py  test_semantic_join_decomposition.py  test_semantic_operators.py
