[project]
name = "omnidf"
version = "0.1.0"
description = "AI-Powered Multi-modal DataFrame."
readme = "README.md"
authors = [
    { name = "Lu Weizheng", email = "luweizheng36@hotmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "graphviz>=0.20.0",
    "pydantic>=2.0.0",
    "litellm>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omnidf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
